--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-strip": "^1.3.2",
+    "@types/lodash": "^4.14.168",
     "@types/react": "^16.9.23",
+    "@types/yandex-maps": "^2.1.14",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
+    "lodash": "^4.17.21",
     "prettier": "^1.19.1",
     "rollup": "^2.1.0",
     "rollup-plugin-babel": "^4.4.0",
