--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rollup-starter",
-  "version": "0.0.1",
+  "name": "yamaps-loader",
+  "version": "0.0.0",
   "main": "./dist/common.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "lint": "eslint --ext .ts,.tsx src",
-    "publish": "yarn build && yarn publish"
+    "publish": "yarn build && yarn publish",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
