--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "rm -rf dist && rollup -c",
     "lint": "eslint --ext .ts,.tsx src",
     "publish": "yarn build && yarn publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
